chore: fix transactions